[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/VariableListItem.gd" type="Script" id=1]
[ext_resource path="res://fonts/convo_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/ttf_files/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/cross.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[node name="VariableContainer" type="HBoxContainer"]
anchor_right = 1.0
margin_right = -914.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableName" type="Label" parent="."]
margin_top = 6.0
margin_right = 620.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "var_example_name"
valign = 1

[node name="BoolValue" type="Button" parent="."]
visible = false
margin_left = 402.0
margin_right = 641.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="TrueLabel" type="Label" parent="BoolValue"]
visible = false
modulate = Color( 0.00784314, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "True"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalseLabel" type="Label" parent="BoolValue"]
modulate = Color( 0.701961, 0.337255, 0.337255, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "False"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntValue" type="SpinBox" parent="."]
visible = false
margin_left = 456.0
margin_right = 636.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme = SubResource( 2 )
min_value = -9999.0
max_value = 9999.0

[node name="StringValue" type="LineEdit" parent="."]
visible = false
modulate = Color( 0.815686, 0.952941, 1, 1 )
margin_left = 214.0
margin_right = 340.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_fonts/font = ExtResource( 2 )
custom_colors/selection_color = Color( 0.25098, 0.733333, 0.796078, 1 )
align = 1
placeholder_text = "null"

[node name="QuickVariableKill" type="TextureButton" parent="."]
modulate = Color( 1, 0.572549, 0.572549, 1 )
margin_left = 624.0
margin_right = 686.0
margin_bottom = 37.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="BoolValue" to="." method="_on_BoolValue_pressed"]
[connection signal="value_changed" from="IntValue" to="." method="_on_SpinBox_value_changed" binds= [ true ]]
[connection signal="text_changed" from="StringValue" to="." method="_on_VariableValue_text_changed"]
[connection signal="text_entered" from="StringValue" to="." method="_on_VariableValue_text_entered"]
[connection signal="pressed" from="QuickVariableKill" to="." method="_on_QuickVariableKill_pressed"]
